# exercism

./: .dockerignore  .gitignore  Dockerfile
.github/workflows/: docker-image.yml  main.yml
python/: pyproject.toml
python/acronym/: acronym.py
python/hamming/: hamming.py
python/high-scores/: high_scores.py
python/isogram/: isogram.py
python/kindergarten-garden/: kindergarten_garden.py  kindergarten_garden_test.py
python/matrix/: matrix.py
python/raindrops/: raindrops.py
python/scrabble-score/: scrabble_score.py
python/twelve-days/: twelve_days.py
python/word-count/: word_count.py
