[tool.poetry]
name = "exercism-python"
version = "0.1.0"
description = "Python Track on Exercism"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
