[tool.poetry]
name = "exercism-python"
version = "0.1.0"
description = "Python Track on Exercism"
authors = ["Tsunenobu Kai <kai2nenobu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["*/.venv/*", "*/pypoetry/virtualenvs/*", "/usr/*", "*_test.py"]
